--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -26,7 +26,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
-        android:src="@drawable/logo" />
+        android:src="@drawable/logo_t" />
 
     <!-- App Name -->
 
