--- a/app/src/main/res/layout/login_forgotten_password.xml
+++ b/app/src/main/res/layout/login_forgotten_password.xml
@@ -33,7 +33,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo_t" />
 
 
 
